# SDL_image

./: CMakeLists.txt
cmake/: SDL_imageConfig.cmake
